// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuCname construct should create the correct resources with minimal config 1`] = `
Object {
  "Mappings": Object {
    "mytestapp": Object {
      "CODE": Object {
        "domainName": "xyz.code-guardian.com",
      },
      "PROD": Object {
        "domainName": "xyz.prod-guardian.com",
      },
    },
  },
  "Parameters": Object {
    "Stage": Object {
      "AllowedValues": Array [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestRecord": Object {
      "Properties": Object {
        "Name": Object {
          "Fn::FindInMap": Array [
            "mytestapp",
            Object {
              "Ref": "Stage",
            },
            "domainName",
          ],
        },
        "RecordType": "CNAME",
        "ResourceRecords": Array [
          "apple.example.com",
        ],
        "Stage": Object {
          "Ref": "Stage",
        },
        "TTL": 3600,
      },
      "Type": "Guardian::DNS::RecordSet",
    },
  },
}
`;

exports[`The GuDnsRecordSet construct should create the correct resources with minimal config 1`] = `
Object {
  "Parameters": Object {
    "Stage": Object {
      "AllowedValues": Array [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestRecord": Object {
      "Properties": Object {
        "Name": "banana.example.com",
        "RecordType": "CNAME",
        "ResourceRecords": Array [
          "apple.example.com",
        ],
        "Stage": Object {
          "Ref": "Stage",
        },
        "TTL": 3600,
      },
      "Type": "Guardian::DNS::RecordSet",
    },
  },
}
`;
